shelf: Fix bug with cannot show autohidden shelf with homecher.

Do not skip events if app list is visible with home launcher on.
Do allow home launcher gesture handler to process events if the shelf
is invisible, or if it is visible via auto-hide.

Test: manual
Bug: 876484
Change-Id: I4080dff5cbd8647d0b1bf6aebc2f19559d7e7d15
Reviewed-on: https://chromium-review.googlesource.com/1194686
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586897}
Former-commit-id: 7d397a8a6321c15489c58e8a1b87d5ee8dc03e4c