ash/shelf/shelf_layout_manager.cc
@@ -1176,18 +1176,17 @@ void ShelfLayoutManager::StartGestureDrag(
   } else {
     HomeLauncherGestureHandler* home_launcher_handler =
         Shell::Get()->app_list_controller()->home_launcher_gesture_handler();
-    if (home_launcher_handler) {
+    if (home_launcher_handler && visibility_state() == SHELF_VISIBLE) {
       home_launcher_handler->OnPressEvent();
       if (home_launcher_handler->window()) {
         gesture_drag_status_ = GESTURE_DRAG_APPLIST_IN_PROGRESS;
         return;
       }
     }
-
     // Disable the shelf dragging if the fullscreen app list is opened.
-    if (is_app_list_visible_) {
+    if (is_app_list_visible_ && !IsHomeLauncherEnabled())
       return;
-    }
+
     gesture_drag_status_ = GESTURE_DRAG_IN_PROGRESS;
     gesture_drag_auto_hide_state_ = visibility_state() == SHELF_AUTO_HIDE
                                         ? auto_hide_state()
@@ -1201,7 +1200,7 @@ void ShelfLayoutManager::UpdateGestureDrag(
     const ui::GestureEvent& gesture_in_screen) {
   HomeLauncherGestureHandler* home_launcher_handler =
       Shell::Get()->app_list_controller()->home_launcher_gesture_handler();
-  if (home_launcher_handler) {
+  if (home_launcher_handler && visibility_state() == SHELF_VISIBLE) {
     if (home_launcher_handler->window()) {
       home_launcher_handler->OnScrollEvent(gesture_in_screen.location());
     } else {
@@ -1295,7 +1294,7 @@ void ShelfLayoutManager::CompleteAppListDrag(
 
   HomeLauncherGestureHandler* home_launcher_handler =
       Shell::Get()->app_list_controller()->home_launcher_gesture_handler();
-  if (home_launcher_handler) {
+  if (home_launcher_handler && visibility_state() == SHELF_VISIBLE) {
     if (home_launcher_handler->window()) {
       home_launcher_handler->OnReleaseEvent(gesture_in_screen.location());
     }
